# StackPI

./: .env.example  .gitignore  README.md
api/: README.md  pyproject.toml
api/app/: __init__.py  alerts.py  audio.py  cloud_status.py  config.py  db.py  local.py  main.py  notifier.py  portal_data.py  portal_sync.py  rfid.py  rfid_ingest.py  rfid_scan_processing.py  rfid_status.py  scan_uploader.py  screens.py  settings.py  setup.py  status_broadcast.py  system_events.py  tz_auto.py  update.py
api/tests/: test_active_reader.py  test_alerts.py  test_audio.py  test_autodetect.py  test_base_url.py  test_cloud_status.py  test_endpoint_config.py  test_endpoint_url_batching.py  test_health.py  test_login_errors.py  test_name_and_description.py  test_network_config.py  test_notifier.py  test_probe_autodetect.py  (+11 more)
db/: README.md
deploy/: README.md  bootstrap.sh  deploy.sh  install.sh
display/: README.md  bootstrap.sh  config.example.json  config.html  display-kiosk-launch.sh  receiver.py  setup.html  stackpi-display-kiosk.service  stackpi-display.service  status-protocol.md  sway-display.conf  update.sh
docs/: ARCHITECTURE.md  OPERATIONS.md  project-spec.md
engine/: README.md  pyproject.toml
engine/app/: agent.py  config.py  hardware.py  main.py  state.py
engine/tests/: test_connectivity.py
esp_stacklight/: README.md  notification-protocol.md  platformio.ini
multicast_listener/: listener.py  sender.py
portal/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
scripts/: .env.test_deploy.example  dev.sh  test_deploy.sh
(+168 files in other folders)
